# howlang

./: .gitignore  ast_nodes.py  definitions.md  examples.how  howlang  howlang.py  howlang2  interpreter.py  lexer.py  parser.py  pure_map_howlang.md  readme.md  readme_old.md  tests.py
.deprecated/: howlang_20260325.c
.github/workflows/: release.yml  release_linter.yml  release_tests.yml
_deprecated/: howlang.c
_deprecated/py_interpreter/: parser.py
c_interpreter/: CMakeLists.txt  README.md  howlang.c  howlang2.c  readme.md
c_interpreter/include/: ast.h  bytecode.h  common.h  compiler.h  frontend.h  howlang_ast.h  howlang_common.h  howlang_frontend.h  howlang_runtime.h  lexer_internal.h  runtime.h  runtime_internal.h  sema.h  vm.h
c_interpreter/src/: ad.c  builtins.c  call.c  common.c  driver.c  frontend.c  gc.c  import.c  lexer.c  parallel.c  parser.c  runtime.c  tensor.c
c_interpreter/src/compiler/: compiler.c  readme.md  sema.c  vm.c
c_interpreter/src/core/: driver.c  gc.c  runtime.c
c_interpreter/src/frontend/: common.c  lexer.c  parser.c
c_interpreter/src/runtime/: builtins.c  call.c  import.c  tensor.c
compiler/: lexer.c
compiler/lexer/: lexer.c  oop_lexer.c
err_tests/: err_bad_for_range_header.how  err_colon_outside_branch.how  err_misplaced_double_colon.how
how/: sort.how
how_interpreter/: how_eval.how  how_lexer.how  how_meta.how  how_parser.how
howlang-vscode-lint/: README.md  extension.js  howlang-lint-0.1.0.vsix  language-configuration.json  package-lock.json  package.json
howlang-vscode-lint/syntaxes/: howlang.tmLanguage.json
howlang_c/: CMakeLists.txt  readme.md
howlang_c/include/compiler/: bytecode.h  compiler.h  sema.h  vm.h
howlang_c/include/frontend/: lexer_internal.h
howlang_c/include/interpreter/: runtime.h  runtime_internal.h
howlang_c/include/shared/: ast.h
howlang_c/src/cli/: driver.c
howlang_c/src/compiler/: CMakeLists.txt  compiler.c  readme.md  sema.c  vm.c
howlang_c/src/frontend/: lexer.c  parser.c
howlang_c/src/interpreter/: ad.c  builtins.c  call.c  gc.c  import.c  parallel.c  runtime.c  tensor.c
howlang_c/src/shared/: common.c
interpreter/: how.py
interpreter/lexer/: automata.html  automata.json  automata.py  export_automata.py  lexer.py
proposals/: c_interpreter_reviews.md  chained_closure_proposal.md  compiler_proposal.md  grad_fix_proposal.md  grad_proposal.md  parallel_proposal.md  tensor_more_proposal.md  tensor_ops_proposal.md  tensor_proposal.md
proposals/done/: grad_proposal.md  tensor_proposal.md
py_interpreter/: lexer.py
samples/: algorithms.how  basic.how  brainfuck.how  brainfuck_test.how  chained_functions.how  clean_algos.how  cnn.how  examples.how  fft.how  game_of_life.how  graph.how  graph_test.how  loop.how  lru_cache.how  lru_cache_test.how  mandelbrot.how  mapreduce.how  mlp.how  pathfinding_visualizer.how  sample.how  sort.how  test.how  test_all.how  test_import.how  test_loops.how  transformer.how  tree.how  try_catch_test.how  wav_synth.how
samples/err_tests/: README.txt  err_bad_unbounded_loop_call.how  err_missing_rbrace.how  err_missing_rparen.how  err_missing_rparen_in_call.how  err_single_colon_in_branch.how
samples/how_interpreter/: how_eval.how  how_meta.how  meta_test.how
samples/original_samples/: sample.how  tree.how
samples/tests/: graph.how  mathlib.how  test_all.how  test_functional.how  test_grad.how  test_graph.how  test_loops.how  test_lru_cache.how  test_tensor.how  (+5 more)
(+10 files in other folders)
