cmake_minimum_required(VERSION 3.16)
project(howlang C)
set(CMAKE_C_STANDARD 11)
include_directories(include)
add_library(howlang_frontend STATIC src/common.c src/frontend.c src/lexer.c src/parser.c)
add_library(howlang_runtime STATIC src/runtime.c)
target_link_libraries(howlang_runtime PUBLIC howlang_frontend m)
add_executable(howlang src/driver.c)
target_link_libraries(howlang PRIVATE howlang_runtime howlang_frontend m)
