cmake_minimum_required(VERSION 3.16)
project(howlang C)
set(CMAKE_C_STANDARD 11)
include_directories(include)

add_compile_options(-Wall -Wextra -Wpedantic)
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    add_compile_options(-fsanitize=address,undefined -g)
    add_link_options(-fsanitize=address,undefined)
endif()
find_package(Threads REQUIRED)
add_library(howlang_frontend STATIC src/common.c src/lexer.c src/parser.c)
add_library(howlang_runtime STATIC src/runtime.c src/ad.c src/import.c src/parallel.c src/call.c src/gc.c src/builtins.c)
target_link_libraries(howlang_runtime PUBLIC howlang_frontend m Threads::Threads)
add_executable(howlang src/driver.c)
target_link_libraries(howlang PRIVATE howlang_runtime howlang_frontend m Threads::Threads)
